<resources>
    <string name="app_name">BlablaCampus</string>
    <string name="app_sub_name1">Blabla</string>
    <string name="app_sub_name2">Campus</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="menu_item_contacts">Contacts</string>
    <string name="menu_item_notifications">Notifications</string>
    <string name="menu_item_infos">Mes infos</string>
    <string name="tab_item_driver">Conducteur</string>
    <string name="tab_item_passager">Passager</string>
    <string name="card_title_rides">Trajets</string>
    <string name="driver_rides_starting_point">Départ</string>
    <string name="driver_rides_endpoint">Arrivée</string>

    <string name="cancel_btn">Annuler</string>
    <string name="subscribe_btn">S\'inscrire</string>
    <string name="forgotten_pwd_btn">J\'ai oublié mon mot de passe</string>
    <string name="login_btn">Se connecter</string>
    <string name="recover_pwd_btn">Récupérer</string>
    <string name="next_btn">Suivant</string>

    <string name="forgotten_pwd_title">Récupérer mon mot de passe</string>
    <string name="login_title">Connexion</string>
    <string name="home_title">Accueil</string>
    <string name="signup_title">Inscription</string>

    <string name="sign_in_failure">Echec de la connexion. Veillez réessayer.</string>
    <string name="sign_in_success">Vous êtes maintenant connecté</string>

    <string name="avatar_desc">Avatar</string>

    <string name="lastname_hint">Nom</string>
    <string name="firstname_hint">Prénom</string>
    <string name="email_hint">Adresse mail</string>
    <string name="phone_hint">Tel</string>
    <string name="password_hint">Mot de passe</string>
    <string name="password_confirm_hint">Confirmation du mot de passe</string>
    <string name="route_desc">Itinéraire</string>
    <string name="school_desc">Ecole</string>
    <string name="school_name_hint">Nom de l\'école</string>
    <string name="school_address_hint">Adresse</string>
    <string name="school_city_hint">Ville</string>
    <string name="signup_btn">S\'inscrire</string>
    <string name="signup_user_title">Infos personnelles</string>
    <string name="signup_school_title">Ecole</string>
    <string name="signup_credentials_title">Identifiants</string>
    <string name="error_invalid_phone">Numéro de téléphone invalide</string>
    <string name="error_invalid_name">Minimum 3 caractères</string>
    <string name="error_invalid_email">Adresse mail invalide</string>
    <string name="error_invalid_pwd">Mot de passe invalide</string>
    <string name="error_invalid_pwd_confirm">Mot de passe différent</string>
    <string name="school_hint">Rechercher mon école</string>

    <string name="account_created">Votre compte a bien été créé</string>
    <string name="account_conflict">Adresse mail déjà utilisée</string>
    <string name="account_invalid_data">Certains champs renseignés sont invalides</string>
    <string name="driver_rides_date">Date</string>
    <string name="driver_rides_hour_hint">Heure</string>
    <string name="departure_time">Heure du départ</string>
    <string name="ride_date">Date du trajet</string>
    <string name="ride_search_btn">Rechercher</string>
    <string name="ride_create_btn">Créer</string>
    <string name="passenger_rides_search_title">Rechercher un trajet</string>
    <string name="search_btn_desc">Rechercher un trajet</string>

    <string name="route_tx_default">Riom - Cézeaux</string>
    <string name="available_seats_nb_tx_default">3</string>
    <string name="available_seats_tx_default">places</string>
    <string name="date_tx_default">Aujourd\'hui à 16h</string>
    <string name="duration_nb_tx_default">30</string>
    <string name="duration_tx_default">min</string>
    <string name="driver_tx_default">Cédric</string>
    <string name="avg_duration_tx">Durée moyenne :</string>
    <string name="avg_duration_nb_tx">30</string>
    <string name="avg_duration_unit_tx2">min</string>
    <string name="day_mon">L</string>
    <string name="day_tue">M</string>
    <string name="day_wed">M</string>
    <string name="day_thu">J</string>
    <string name="day_fri">V</string>
    <string name="day_sat">S</string>
    <string name="day_sun">D</string>
    <string name="route_nav_desc">nav</string>

</resources>
