<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="4dp"
    android:layout_marginBottom="4dp"
    android:background="@drawable/radius_full"
    android:backgroundTint="@color/quantum_grey200"
    android:elevation="2dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/driver_route_infos"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/radius_border_full"
        app:layout_constraintEnd_toStartOf="@id/driver_route_nav"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintHorizontal_weight="9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/avg_duration_tx"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/avg_duration_tx"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/blablaCampusPurpleClear"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/route_tx" />

        <TextView
            android:id="@+id/route_tx"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/route_tx_default"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textColor="@color/blablaCampuspurple"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/avg_duration_unit_tx2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:text="@string/avg_duration_unit_tx2"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/blablaCampusPurpleClear"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/avg_duration_tx"
            app:layout_constraintStart_toEndOf="@+id/avg_duration_nb_tx"
            app:layout_constraintTop_toTopOf="@+id/avg_duration_tx" />

        <TextView
            android:id="@+id/avg_duration_nb_tx"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/avg_duration_nb_tx"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/blablaCampusPurpleClear"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/avg_duration_tx"
            app:layout_constraintStart_toEndOf="@+id/avg_duration_tx"
            app:layout_constraintTop_toTopOf="@+id/avg_duration_tx" />

        <androidx.constraintlayout.widget.ConstraintLayout android:id="@+id/active_days"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="1.5dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="1.5dp"
            android:layout_marginBottom="1.5dp"
            android:background="@drawable/radius_bottom"
            android:backgroundTint="@color/quantum_grey200"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/avg_duration_tx">

            <TextView
                android:id="@+id/day_mon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/day_mon"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/day_tue"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/day_tue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/day_tue"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@+id/day_mon"
                app:layout_constraintRight_toLeftOf="@+id/day_wed"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/day_wed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/day_wed"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@+id/day_tue"
                app:layout_constraintRight_toLeftOf="@+id/day_thu"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/day_thu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/day_thu"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@+id/day_wed"
                app:layout_constraintRight_toLeftOf="@+id/day_fri"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/day_fri"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/day_fri"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@+id/day_thu"
                app:layout_constraintRight_toLeftOf="@+id/day_sat"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/day_sat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/day_sat"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@+id/day_fri"
                app:layout_constraintRight_toLeftOf="@+id/day_sun"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/day_sun"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/day_sun"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintLeft_toRightOf="@+id/day_sat"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/driver_route_nav"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/radius_right"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/driver_route_infos"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/arrow"
            android:contentDescription="@string/route_nav_desc" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>