<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/blablaCampusWhite">

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:id="@+id/avatarCL2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="false"
            android:layout_centerHorizontal="true"
            android:layout_margin="10dp"
            android:fitsSystemWindows="false">

            <ImageView
                android:id="@+id/avatar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/avatar_desc"
                android:src="@drawable/avatar" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/transparent"
                android:contentDescription="@string/cancel_btn"
                android:cropToPadding="false"
                android:onClick="onCancel"
                android:padding="20dp"
                android:src="@drawable/add"
                app:layout_anchor="@id/avatar"
                app:layout_anchorGravity="top|right" />

        </androidx.coordinatorlayout.widget.CoordinatorLayout>

        <RelativeLayout android:id="@+id/signup__credentials_inputs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/avatarCL2"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp">

            <com.google.android.material.textfield.TextInputLayout android:id="@+id/signup_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginTop="10dp"
                android:hint="@string/email_hint"
                app:boxBackgroundMode="outline"
                app:boxStrokeColor="@color/blablaCampuspurple"
                app:hintAnimationEnabled="true"
                app:hintEnabled="true"
                style="@style/outlinedInput">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/signup_email_text"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/blablaCampuspurple" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout android:id="@+id/signup_pwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/signup_email"
                android:layout_marginTop="10dp"
                android:hint="@string/password_hint"
                app:boxBackgroundMode="outline"
                app:boxStrokeColor="@color/blablaCampuspurple"
                app:hintAnimationEnabled="true"
                app:hintEnabled="true"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/blablaCampuspurple"
                style="@style/outlinedInput">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/signup_pwd_text"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:inputType="textPassword"
                    android:textColor="@color/blablaCampuspurple" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout android:id="@+id/signup_pwd_confirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/signup_pwd"
                android:layout_marginTop="10dp"
                android:hint="@string/password_confirm_hint"
                app:boxBackgroundMode="outline"
                app:boxStrokeColor="@color/blablaCampuspurple"
                app:hintAnimationEnabled="true"
                app:hintEnabled="true"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/blablaCampuspurple"
                style="@style/outlinedInput">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/signup_pwd_confirm_text"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:inputType="textPassword"
                    android:textColor="@color/blablaCampuspurple" />

            </com.google.android.material.textfield.TextInputLayout>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/signup__credentials_inputs"
            android:padding="0dp">

            <Button
                style="@style/outlinedButton"
                android:layout_width="@dimen/margin_205"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:onClick="showSchoolPage"
                android:text="@string/next_btn" />

        </RelativeLayout>

    </RelativeLayout>
</ScrollView>