<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blablaCampusWhite"
    android:backgroundTint="@color/blablaCampusWhite"
    android:backgroundTintMode="add"
    android:orientation="vertical"
    tools:context="com.example.cedriclingom.blablacampus.activities.MainActivity">


    <RelativeLayout
        android:id="@+id/content_area"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="93"
        android:backgroundTint="@color/blablaCampusWhite"
        android:elevation="0dp">

        <TextView
            android:id="@+id/home_blabla_text"
            style="@style/homeText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/app_sub_name1" />

        <TextView
            style="@style/homeText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/home_blabla_text"
            android:text="@string/app_sub_name2" />

    </RelativeLayout>


    <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/bottom_app_bar_CL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="20"
        android:elevation="10dp">

        <!-- Other components and views -->

        <com.google.android.material.bottomappbar.BottomAppBar
            android:id="@+id/bottom_app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            app:backgroundTint="@color/blablaCampuspurple"
            app:fabAlignmentMode="center"
            app:fabCradleMargin="8dip"
            app:navigationIcon="@drawable/notifications_mdpi"
            app:navigationContentDescription="@string/menu_item_notifications"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/trajets_mdpi"
            app:backgroundTint="@color/blablaCampusPurpleClear"
            app:layout_anchor="@+id/bottom_app_bar" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</LinearLayout>
